content align fixed

--- a/css/main.css
+++ b/css/main.css
@@ -452,17 +452,25 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
-/* line 7, ../sass/base/_base.scss */
+/*
+	MODULES - Individual site components
+*/
+/* line 2, ../sass/modules/_sections.scss */
+main img {
+  width: 100%;
+}
+
+/* line 6, ../sass/modules/_sections.scss */
 .main-content {
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: center;
   height: calc(100vh - 127px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
-/*
-	MODULES - Individual site components
-*/
 /*
 	LAYOUTS - Page layout styles
 */
