--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,12 +1,3 @@
 body {
 	font-family: 'Open Sans', sans-serif;
 }
-main {
-
-}
-.main-content {
-	background-repeat: no-repeat;
-	background-size: 100% auto;
-	background-position: center;
-	height: calc(100vh - 127px);
-}
